// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package postgres

import (
	"github.com/google/uuid"
	"github.com/jackc/pgx/v5/pgtype"
)

type Permission struct {
	ID        string
	CreatedAt pgtype.Timestamptz
	UpdatedAt pgtype.Timestamptz
	DeletedAt pgtype.Timestamptz
}

type Role struct {
	ID        uuid.UUID
	Name      string
	TenantID  uuid.UUID
	CreatedAt pgtype.Timestamptz
	UpdatedAt pgtype.Timestamptz
	DeletedAt pgtype.Timestamptz
}

type RolesPermission struct {
	RoleID       uuid.UUID
	PermissionID string
	CreatedAt    pgtype.Timestamptz
}

type Tenant struct {
	ID        uuid.UUID
	Name      string
	CreatedAt pgtype.Timestamptz
	UpdatedAt pgtype.Timestamptz
	DeletedAt pgtype.Timestamptz
}

type User struct {
	ID        uuid.UUID
	Name      string
	Email     string
	Password  pgtype.Text
	CreatedAt pgtype.Timestamptz
	UpdatedAt pgtype.Timestamptz
	DeletedAt pgtype.Timestamptz
}

type UsersRole struct {
	UserID    uuid.UUID
	RoleID    uuid.UUID
	CreatedAt pgtype.Timestamptz
}
